--- a/assistuntu/src/main/java/assistuntu/ComplectSelector.form
+++ b/assistuntu/src/main/java/assistuntu/ComplectSelector.form
@@ -10,21 +10,10 @@
     </border>
     <children>
       <grid id="94766" layout-manager="BorderLayout" hgap="0" vgap="0">
-        <constraints border-constraint="Center"/>
+        <constraints border-constraint="South"/>
         <properties/>
         <border type="none"/>
         <children>
-          <scrollpane id="6459c">
-            <constraints border-constraint="Center"/>
-            <properties/>
-            <border type="none"/>
-            <children>
-              <component id="be34b" class="javax.swing.JTable" binding="table">
-                <constraints/>
-                <properties/>
-              </component>
-            </children>
-          </scrollpane>
           <grid id="9538f" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="4">
             <constraints border-constraint="Last"/>
             <properties/>
@@ -34,13 +23,72 @@
                 <constraints/>
                 <properties>
                   <horizontalAlignment value="0"/>
-                  <text value="OK"/>
+                  <text value="Сохранить"/>
+                </properties>
+              </component>
+              <component id="ce09a" class="javax.swing.JButton" binding="buttonCancel">
+                <constraints/>
+                <properties>
+                  <text value="Отмена"/>
                 </properties>
               </component>
             </children>
           </grid>
         </children>
       </grid>
+      <tabbedpane id="ee54f" default-binding="true">
+        <constraints border-constraint="Center"/>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <grid id="522e0" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="0"/>
+            <constraints>
+              <tabbedpane title="Комплекты"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <scrollpane id="6459c">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties/>
+                <border type="none"/>
+                <children>
+                  <component id="be34b" class="javax.swing.JTable" binding="complectTable">
+                    <constraints/>
+                    <properties/>
+                  </component>
+                </children>
+              </scrollpane>
+            </children>
+          </grid>
+          <grid id="b3868" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="0"/>
+            <constraints>
+              <tabbedpane title="Темы"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <scrollpane id="4b4dc">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties/>
+                <border type="none"/>
+                <children>
+                  <component id="67634" class="javax.swing.JTable" binding="themeTable">
+                    <constraints/>
+                    <properties/>
+                  </component>
+                </children>
+              </scrollpane>
+            </children>
+          </grid>
+        </children>
+      </tabbedpane>
     </children>
   </grid>
 </form>
