--- a/assistuntu/src/main/java/assistuntu/MainForm.form
+++ b/assistuntu/src/main/java/assistuntu/MainForm.form
@@ -27,13 +27,19 @@
               <text value="Показать ответ"/>
             </properties>
           </component>
-          <component id="a7dbf" class="javax.swing.JTextPane" binding="themeLabel">
+          <grid id="ae29e" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="4">
             <constraints/>
-            <properties>
-              <editable value="false"/>
-              <enabled value="false"/>
-            </properties>
-          </component>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <component id="8de00" class="javax.swing.JLabel" binding="questionTheme">
+                <constraints/>
+                <properties>
+                  <text value="Label"/>
+                </properties>
+              </component>
+            </children>
+          </grid>
         </children>
       </toolbar>
       <grid id="72400" binding="questionPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
