--- a/assistuntu/src/main/java/assistuntu/ComplectSelector.form
+++ b/assistuntu/src/main/java/assistuntu/ComplectSelector.form
@@ -41,8 +41,7 @@
         <properties/>
         <border type="none"/>
         <children>
-          <grid id="522e0" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-            <margin top="0" left="0" bottom="0" right="0"/>
+          <grid id="522e0" layout-manager="BorderLayout" hgap="0" vgap="0">
             <constraints>
               <tabbedpane title="Комплекты"/>
             </constraints>
@@ -50,9 +49,7 @@
             <border type="none"/>
             <children>
               <scrollpane id="6459c">
-                <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
+                <constraints border-constraint="Center"/>
                 <properties/>
                 <border type="none"/>
                 <children>
@@ -64,8 +61,7 @@
               </scrollpane>
             </children>
           </grid>
-          <grid id="b3868" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-            <margin top="0" left="0" bottom="0" right="0"/>
+          <grid id="b3868" layout-manager="BorderLayout" hgap="0" vgap="0">
             <constraints>
               <tabbedpane title="Темы"/>
             </constraints>
@@ -73,9 +69,7 @@
             <border type="none"/>
             <children>
               <scrollpane id="4b4dc">
-                <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-                </constraints>
+                <constraints border-constraint="Center"/>
                 <properties/>
                 <border type="none"/>
                 <children>
